cswap/src/snapshots/cswap__solver__tests__CVC4_cmd_snap.snap
---
source: src/solver.rs
expression: "CVC4_Command_Builder::new().unconstrained_simp().incremental().strings_exp().dump_all().check_unsat_cores().cmd"
---
[
    "timeout",
    "-v",
    "6s",
    "cvc4",
    "--produce-models",
    "--check-models",
    "--unconstrained-simp",
    "--incremental",
    "--strings-exp",
    "--dump-models",
    "--dump-unsat-cores",
    "--dump-unsat-cores-full",
    "--check-unsat-cores",
]
