cswap/src/snapshots/cswap__solver__tests__cvc4_cmd_snap.snap
---
source: cswap/src/solver.rs
expression: "CVC4_Command_Builder::new().timeout(Duration::from_secs(3)).models().unconstrained_simp().incremental().strings_exp().dump_all().check_unsat_cores().cmd"
---
[
    "cvc4",
    "--tlimit",
    "3000",
    "--produce-models",
    "--check-models",
    "--unconstrained-simp",
    "--incremental",
    "--strings-exp",
    "--dump-models",
    "--dump-unsat-cores",
    "--dump-unsat-cores-full",
    "--check-unsat-cores",
]
