cswap/src/snapshots/cswap__solver__tests__get_var_vals_snap.snap
---
source: cswap/src/solver.rs
expression: "r.extract_const_var_vals(&vec![\"GEN1\" . to_owned (), \"GEN2\" . to_owned (),\n                               \"BAV3\" . to_owned ()])"
---
[
    (
        Token(
            "GEN1",
        ),
        Compound(
            [
                RefCell {
                    value: Symbol(
                        RefCell {
                            value: Token(
                                "-",
                            ),
                        },
                    ),
                },
                RefCell {
                    value: Constant(
                        RefCell {
                            value: Dec(
                                "1.0",
                            ),
                        },
                    ),
                },
            ],
        ),
    ),
    (
        Token(
            "BAV3",
        ),
        Symbol(
            RefCell {
                value: Token(
                    "true",
                ),
            },
        ),
    ),
    (
        Token(
            "GEN2",
        ),
        Constant(
            RefCell {
                value: Dec(
                    "0.0",
                ),
            },
        ),
    ),
]
