cswap/src/snapshots/cswap__solver__tests__propagate_unknown_snap.snap
---
source: cswap/src/solver.rs
expression: "RSolve::propogate_diff(&(vec![ResultLine :: Unsat], false),\n                       &(vec![ResultLine :: Unknown], false))"
---
Ok(
    (
        [
            Unsat,
        ],
        false,
    ),
)
