cswap/src/snapshots/cswap__solver__tests__propagate_w_diff_snap.snap
---
source: cswap/src/solver.rs
expression: "RSolve::propogate_diff(&(vec![ResultLine :: Unsat], true),\n                       &(vec![ResultLine :: Sat], false))"
---
Err(
    (),
)
