cswap/src/snapshots/cswap__solver__tests__propagate_w_mnp_err_rev_snap.snap
---
source: cswap/src/solver.rs
expression: "RSolve::propogate_diff(&(vec![ResultLine :: Sat], true),\n                       &(vec![ResultLine :: Sat, ResultLine :: Unsat], false))"
---
Ok(
    (
        [
            Sat,
            Unsat,
        ],
        false,
    ),
)
