cswap/src/snapshots/cswap__solver__tests__propagate_w_mnp_err_snap.snap
---
source: cswap/src/solver.rs
expression: "RSolve::propogate_diff(&(vec![ResultLine :: Sat, ResultLine :: Unsat], false),\n                       &(vec![ResultLine :: Sat], true))"
---
Ok(
    (
        [
            Sat,
            Unsat,
        ],
        false,
    ),
)
