cswap/src/snapshots/cswap__solver__tests__tempfile_solve_snap.snap
---
source: src/solver.rs
expression: check_valid_solve_as_temp(&s)
---
Ok(
    [
        RSolve {
            stdout: "",
            stderr: "sat\n",
            lines: [
                Sat,
            ],
            solver: Z3,
        },
        RSolve {
            stdout: "/tmp/.tmpmkSZur.smt2:1.6: No set-logic command was given before this point.\n/tmp/.tmpmkSZur.smt2:1.6: CVC4 will make all theories available.\n/tmp/.tmpmkSZur.smt2:1.6: Consider setting a stricter logic for (likely) better performance.\n/tmp/.tmpmkSZur.smt2:1.6: To suppress this warning in the future use (set-logic ALL).\n",
            stderr: "sat\n",
            lines: [
                Generic(
                    "/tmp/.tmpmkSZur.smt2:1.6: No set-logic command was given before this point.",
                ),
                Generic(
                    "/tmp/.tmpmkSZur.smt2:1.6: CVC4 will make all theories available.",
                ),
                Generic(
                    "/tmp/.tmpmkSZur.smt2:1.6: Consider setting a stricter logic for (likely) better performance.",
                ),
                Generic(
                    "/tmp/.tmpmkSZur.smt2:1.6: To suppress this warning in the future use (set-logic ALL).",
                ),
                Sat,
            ],
            solver: CVC4,
        },
    ],
)
